# ai-quant-analytics-cli

./: .pre-commit-config.yaml  Makefile  README.md  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: ci.yml
src/metrics/: __init__.py  max_drawdown.py  total_return.py
src/quantcli/: __init__.py  __main__.py  cli.py  orchestrator.py  refusals.py  run.py  runtime.py  validate_intent.py
src/quantcli/data/: __init__.py  fake_price_provider.py  fake_provider.py  price_provider.py  yfinance_price_provider.py
src/quantcli/llm/: anthropic_client.py  errors.py  fake_llm_client.py  llm_client.py
src/quantcli/metrics/: max_drawdown.py  total_return.py
src/quantcli/observability/: debug.py
src/quantcli/router/: __init__.py  decode.py  fake_llm_client.py  prompt.py  router.py
src/quantcli/schemas/: __init__.py  intent.py  llm_refusal.py  models.md  params.py  refusal.py  result.py  time_range.py  tool_name.py  tools.py
src/quantcli/tools/: __init__.py  metrics.py  registry.py
tests/: conftest.py
tests/e2e/: test_run.py
tests/integration/: test_run_query.py  test_yfinance_price_provider.py
tests/smoke/: test_llm_smoke.py
tests/unit/cli/: test_cli.py
tests/unit/metrics/: test_max_drawdown.py  test_realized_volatility.py  test_sharpe_ratio.py  test_total_return.py  total_return.py
tests/unit/observability/: test_debug_logging.py
tests/unit/orchestrator/: test_run_intent.py
tests/unit/router/: test_decode.py  test_router.py
tests/unit/validation/: test_validate_intent.py
