[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-quant-analytics-cli"
version = "0.1.0"
requires-python = ">=3.11"

[project.scripts]
quantcli = "quantcli.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.ruff]
target-version = "py311"
line-length = 88
select = ["E", "F", "W", "I", "B", "UP", "SIM"]
ignore = []
fix = true

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_ignores = true
disallow_any_unimported = true
disallow_any_expr = false
check_untyped_defs = true
exclude = [
  "tests/",
]
